# easyreg_standalone

./: .gitattributes  .gitignore  00_notebook.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
easyreg/: __init__.py  mri_easyreg.py  mri_easywarp.py  nifti_utils.py
easyreg/custom_scripts/: segment_csf_gm_wm.py
easyreg/models/: easyreg_v10_230103.h5  synthseg_2.0.h5  synthseg_parc_2.0.h5
