[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyreg_standalone"
version = "0.0.1"
authors = [
  { name="Joseph Turner", email="jiturner@bwh.harvard.edu" },
]
description = "A standalone version of FreeSurfer's easyreg"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tensorflow==2.13.1",
    "torch",
    "scipy",
    "neurite @ git+https://github.com/JosephIsaacTurner/neurite.git",
    "voxelmorph",
    "nibabel",
    "nilearn",
    "numpy",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/josephisaacturner/easyreg_standalone"
Issues = "https://github.com/josephisaacturner/easyreg_standalone/issues"

[project.scripts]
easyreg-mri = "easyreg.mri_easyreg:main"
easywarp-mri = "easyreg.mri_easywarp:main"
